# rust-wasm-testing-example

./: Cargo.toml  README.md
.github/workflows/: builder.yaml
src/: lib.rs
